deployment/kafka-cost-control/base/kafka-connect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kafka-connect
  template:
    metadata:
      labels:
        k8s-app: kafka-connect
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: kafka-connect
          image: spoud/kafka-cost-control-connect:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 500Mi
          ports:
            - containerPort: 8083
              name: http
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 60

---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kafka-connect
  name: kafka-connect-service
spec:
  ports:
    - port: 8083
      name: http
      targetPort: 8083
  selector:
    k8s-app: kafka-connect
