deployment/kafka-cost-control/base/timescaledb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: timescaledb
spec:
  selector:
    matchLabels:
      k8s-app: timescaledb
  serviceName: "timescaledb"
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: timescaledb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: timescaledb
          image: timescale/timescaledb:latest-pg16
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 4000m
              memory: 4Gi
            requests:
              cpu: 100m
              memory: 1Gi
          ports:
            - containerPort: 5432
              name: timescaledb
          volumeMounts:
            - name: timescaledb-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: timescaledb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi

---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: timescaledb
  name: timescaledb-service
spec:
  ports:
    - port: 5432
      name: timescaledb
      targetPort: 5432
  selector:
    k8s-app: timescaledb
