deployment/kafka-cost-control/base/kafka-cost-control-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: kafka-cost-control-ui
  name: kafka-cost-control-ui
spec:
  selector:
    matchLabels:
      k8s-app: kafka-cost-control-ui
  template:
    metadata:
      labels:
        k8s-app: kafka-cost-control-ui
    spec:
      containers:
        - name: kafka-cost-control-ui
          image: spoud/kafka-cost-control-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-cost-control-ui-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    k8s-app: kafka-cost-control-ui

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-cost-control-ui-ingress
spec:
  rules:
    - host: "TO_BE_DEFINED_BY_OVERRIDE"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-cost-control-ui-service
                port:
                  number: 8080
