deployment/kafka-cost-control/base/virtual-service.yaml
# TODO convert to ingress

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-cost-control-virtualservice
spec:
  hosts:
    - "TO_BE_DEFINED_BY_OVERRIDE"
  gateways:
    - "default/oauth-gateway"
  http:
    - name: "kafka-cost-control"
      match:
        - uri:
            prefix: /graphql-ui
        - uri:
            prefix: /graphql
      route:
        - destination:
            host: kafka-cost-control-service
            port:
              number: 8080
    # In preparation for the UI
    - route:
        - destination:
            host: kafka-cost-control-ui-service
            port:
              number: 80
